<package>
  <name>autoware_rviz_debug</name>
  <version>0.10.2</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke Fujii</maintainer>
  <license>BSD</license>
  <url>http://www.autoware.ai/</url>
  <author>Yusuke FUJII</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>state</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>state</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
